# AviDB

./: Array.h  AviDB.sln  AviDB.vcxproj  AviDB.vcxproj.filters  CMakeLists.txt  IO.cpp  Parser.cpp  Parser.h  Text.h  data.avidb  data.txt  main.cpp  notes.txt
AviDB/: Array.cpp  Array.h  AviDB.vcxproj  AviDB.vcxproj.filters  Convert.cpp  Convert.h  Data.h  DataBase.cpp  DataBase.h  Dict.cpp  Dict.h  DictItem.cpp  DictItem.h  IO.h  Interpreter.cpp  Interpreter.h  Item.cpp  Item.h  Parser.cpp  Text.cpp  Text.h  main.cpp
AviDB_TEST/: AviDB_TEST.cpp  AviDB_TEST.vcxproj  AviDB_TEST.vcxproj.filters
